--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Samuele Esposito <36164633+SamueleEsposito@users.noreply.github.com>
 edition = "2018"
 
 [dependencies]
-tini = "0.2"
+rust-ini = "0.15"
