--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "xcursor"
+description = "A library for loading XCursor themes"
 version = "0.1.0"
-authors = ["Samuele Esposito <36164633+SamueleEsposito@users.noreply.github.com>"]
 edition = "2018"
+
+authors = ["Samuele Esposito"]
+license = "MIT"
+repository = "https://github.com/esposm03/xcursor-rs"
+documentation = "https://docs.rs/xcursor-rs"
+readme = "README.md"
 
 [dependencies]
 rust-ini = "0.15"
