--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "xcursor"
 description = "A library for loading XCursor themes"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2018"
 
 authors = ["Samuele Esposito"]
@@ -16,4 +16,4 @@ include = [
 ]
 
 [dependencies]
-rust-ini = "0.15"
+regex = "1"
