--- a/xcursor/Cargo.toml
+++ b/xcursor/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 authors = ["Samuele Esposito"]
 license = "MIT"
 repository = "https://github.com/esposm03/xcursor-rs"
-documentation = "https://docs.rs/xcursor-rs"
+documentation = "https://docs.rs/xcursor"
 readme = "README.md"
 
 include = [
@@ -17,3 +17,4 @@ include = [
 
 [dependencies]
 regex = "1"
+xcursor-parser = {path = "../xcursor-parser"}
