feat: add a parser for xcursor files (#2)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "xcursor"
 description = "A library for loading XCursor themes"
-version = "0.1.2"
+version = "0.2.0"
 edition = "2018"
 
 authors = ["Samuele Esposito"]
 license = "MIT"
 repository = "https://github.com/esposm03/xcursor-rs"
-documentation = "https://docs.rs/xcursor-rs"
+documentation = "https://docs.rs/xcursor"
 readme = "README.md"
 
 include = [
@@ -17,3 +17,4 @@ include = [
 
 [dependencies]
 regex = "1"
+nom = "5"
