--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,9 @@ include = [
     "Cargo.toml",
 ]
 
+[dependencies]
+shellexpand = "2"
+
 [dependencies.nom]
 version = "5"
 default-features = false
