--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Build
       run: cargo build
     - name: Run tests
-      run: cargo test
+      run: cargo test -- --test-threads 1
     - name: Format
       run: cargo fmt -- --check
     - name: Run Clippy
