--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,4 @@ include = [
 
 [dependencies]
 shellexpand = "2"
-
-[dependencies.nom]
-version = "5"
-default-features = false
-features = ["std"]
+nom = {version = "5", default-features = false, features = ["std"]}
