--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "xcursor"
 description = "A library for loading XCursor themes"
-version = "0.3.4"
+version = "0.3.5"
 edition = "2018"
 
 authors = ["Samuele Esposito"]
@@ -10,9 +10,4 @@ repository = "https://github.com/esposm03/xcursor-rs"
 documentation = "https://docs.rs/xcursor"
 readme = "README.md"
 
-include = [
-    "**/*.rs",
-    "Cargo.toml",
-    "LICENSE",
-    "README.md",
-]
+include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
