--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,3 +24,20 @@ jobs:
       run: cargo fmt -- --check
     - name: Run Clippy
       run: cargo clippy
+
+  msrv:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Install and activate old Rust
+      run: |
+        rustup install 1.34.0
+        rustup default 1.34.0
+        cargo --version
+        rustc --version
+    - name: Build
+      run: cargo build
+    - name: Run tests
+      run: cargo test
