--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "xcursor"
 description = "A library for loading XCursor themes"
-version = "0.3.8"
+version = "0.3.9"
 edition = "2018"
 
 authors = ["Samuele Esposito"]
@@ -9,5 +9,7 @@ license = "MIT"
 repository = "https://github.com/esposm03/xcursor-rs"
 documentation = "https://docs.rs/xcursor"
 readme = "README.md"
+categories = ["gui"]
+keywords = ["themes", "cursor", "x-cursor", "load", "parser"]
 
 include = ["**/*.rs", "Cargo.toml", "LICENSE", "README.md"]
